--- a/src/app/components/Navbar.css
+++ b/src/app/components/Navbar.css
@@ -4,12 +4,10 @@
     align-items: center;
     position: fixed;
     top: 0;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 75%);
+    background-color: rgba(22, 22, 22, 0.98);
+    border-bottom: rgb(161, 161, 161, 0.5) 2px solid;
     width: 100%;
     z-index: 80;
-    transition: background-color 0.4s ease, box-shadow 0.4s ease;
-    padding: 10px 0 5px 0;
-    
 
 }   
 
