--- a/src/app/course/test/components/CourseContent.css
+++ b/src/app/course/test/components/CourseContent.css
@@ -13,9 +13,8 @@
     max-width: 1200px;
     display: flex;
     flex-direction: column;
-    text-align: center;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     video{
         margin-top: 4rem;
         max-width: 800px;
