--- a/src/app/components/Navbar.css
+++ b/src/app/components/Navbar.css
@@ -5,8 +5,8 @@
     position: fixed;
     top: 0;
     background-color: rgba(22, 22, 22, 0.98);
-    border-bottom: rgb(161, 161, 161, 0.5) 2px solid;
-    width: 100%;
+    border-bottom: rgb(161, 161, 161, 0.2) 2px solid;
+    width: 100vw;
     z-index: 80;
 
 }   
@@ -103,7 +103,6 @@
 /* Styles for individual dropdown items */
 .dropdown-item {
     text-decoration: none;
-    line-height: 1.5;
     display: flex;
     flex-direction: column;
     transition: 0.8s;
@@ -134,7 +133,8 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 2rem;
+    min-height: 2rem;
+    height: auto;
     flex-direction: column;
  
     
@@ -164,30 +164,4 @@
 
 .hamburger-checkbox:checked ~ .dropdown-menu .dropdown-item {
     opacity: 1;
-}
-/* Responsive design */
-@media screen and (max-width: 1000px) {
-    .nav-wrapper {
-        gap: 10px;
-    }
-
-    .navbar a {
-        margin: 10px 0;
-    }
-}
-@media screen and (max-width: 560px) {
-    .dropdown-item{
-        h2{
-            display: none;
-        }
-        
-    }
-}
-@media screen and (max-width: 560px) {
-    .dropdown-item{
-        h2{
-            display: none;
-        }
-        
-    }
 }
