--- a/src/app/course/test/components/CourseContent.css
+++ b/src/app/course/test/components/CourseContent.css
@@ -3,23 +3,30 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    padding: 2rem;
+    text-align: left;
+    width: 100%;
+    background: white;
+    img{
+        width: auto;
+        height: 400px;
 
+        object-fit: cover;
+    }
+
+}
+.content-text{
+    display: block;
+    width: 80%;
 }
 .course-item {
     padding: 2rem 0;
     color: var(--dark-gray);
-    width: 100%;
-    max-width: 1200px;
+    width: 60%;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: start;
-    video{
-        margin-top: 4rem;
-        max-width: 800px;
-        width: 100%;
-    }
     p{
         color: var(--gray);
     }
@@ -27,3 +34,7 @@
         text-align: left;
     }
 }
+@media screen and (max-width: 600px) {
+   
+    
+  }
