--- a/src/app/course/test/components/CourseTag.css
+++ b/src/app/course/test/components/CourseTag.css
@@ -4,8 +4,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 4rem 0;
+  padding: 4rem 0;
   gap: 1rem;
+  background: white;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
   a {
     display: flex;
     justify-content: center;
@@ -25,35 +27,28 @@
   }
   a:hover {
     background-color: var(--dark-blue);
-  }
-  h1 {
-    color: var(--navy);
-  }
-  h3 {
-    color: var(--navy);
-  }
-  p{
-    color: var(--gray);
-  }
-  img {
-    width: 4rem;
-  }
+
+}
 }
 .course-name {
-  display: block;
-  width: 40%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 800px;
   justify-content: center;
   align-items: center;
   text-align: center;
   height: auto;
   color: var(--gray);
+  hr{
+    width: 50%;
+  }
 }
 .tag {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: var(--blue);
   p {
     color: var(--gray);
     font-size: 0.8rem;
