--- a/src/app/course/test/components/CourseContent.css
+++ b/src/app/course/test/components/CourseContent.css
@@ -6,23 +6,24 @@
     text-align: left;
     width: 100%;
     background: white;
+    overflow: hidden;
     img{
         width: auto;
         height: 400px;
-
+        
         object-fit: cover;
     }
 
 }
 .content-text{
     display: block;
-    width: 80%;
+    width: 100%;
+    padding: 0 1rem;
 }
 .course-item {
-    padding: 2rem 0;
     color: var(--dark-gray);
-    width: 60%;
-
+    width: 80%;
+    margin: 1rem 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -34,7 +35,9 @@
         text-align: left;
     }
 }
-@media screen and (max-width: 600px) {
-   
+@media screen and (max-width: 1000px) {
+    .course-item {
+        width: 80%;
+    }
     
   }
