--- a/src/app/course/test/components/CourseHero.css
+++ b/src/app/course/test/components/CourseHero.css
@@ -3,11 +3,11 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   overflow: hidden;
   color: white;
   background: white;
+  height: 100vh;
   h1 {
     line-height: 1;
     font-weight: 600;
@@ -37,12 +37,15 @@
     rgba(0, 0, 0, 0.4) 60%
   );
   pointer-events: none;
- height: 72vh;
+ height: 66vh;
+ 
 }
 .course-hero img {
   object-fit: cover;
-  width: 100vw;
-  height: 72vh;
+  min-width: auto;
+ height: 66vh;
+
+
 }
 
 .course-overlay {
@@ -73,7 +76,7 @@
   z-index: 8;
   p{
     padding: 0.2rem;
-    font-size: 0.5rem;
+    font-size: 2vh;
   }
 }
 .course-text {
@@ -84,21 +87,31 @@
   justify-content: center;
   gap: 20px;
   animation: fadeIn 0.8s ease;
+  padding: 1rem;
 }
-.course-hero-buttom{
+.course-hero-buttom,.course-hero-buttom-mobile{
   width: 100%;
-  height: 28vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+.course-hero-buttom-mobile{
+  display: none;
+  
+  .course-price{
+    gap: 20px;
+  }
+ 
+}
 .course-price {
   display: flex;
-  align-items: center;
   justify-content: space-between;
   width: 80%;
   color: var(--gray);
+  text-align: left;
+  margin: 1rem 0;
   p{
     font-size: 0.8rem;
   }
@@ -106,15 +119,17 @@
 
 .course-links {
   display: flex;
+   
   align-items: center;
   justify-content: space-between;
-  gap: 1rem;
+
+
 
   color: var(--gray);
   width: 80%;
   p{
-    font-size: 0.6rem;
-    width: 40%;
+    font-size: 0.8rem;
+    width: 60%;
   }
 
   a {
@@ -139,4 +154,23 @@
   }
 }
 @media screen and (max-width: 1000px) {
+
+  .course-price{
+    display: flex;
+
+    flex-direction: column;
+    width: 100%;
+    padding: 0 1rem;
+  }
+  .course-links{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+  }
+  .course-hero-buttom{
+    display: none;
+  }
+  .course-hero-buttom-mobile{
+    display: flex;
+  }
 }
