--- a/src/app/course/test/components/CourseTag.css
+++ b/src/app/course/test/components/CourseTag.css
@@ -39,7 +39,7 @@
   align-items: center;
   text-align: center;
   height: auto;
-  color: var(--gray);
+  color: var(--dark-gray);
   hr{
     width: 50%;
   }
