--- a/src/app/course/test/components/CourseContent.css
+++ b/src/app/course/test/components/CourseContent.css
@@ -7,6 +7,8 @@
     width: 100%;
     background: white;
     overflow: hidden;
+    padding: 4rem 0 0 0;
+    color: var(--dark-gray);
     img{
         width: auto;
         height: 400px;
@@ -17,25 +19,36 @@
 }
 .content-text{
     display: block;
-    width: 100%;
-    padding: 0 1rem;
+    width:80%;
+
 }
 .course-item {
-    color: var(--dark-gray);
-    width: 80%;
+    
+    width: 60%;
     margin: 1rem 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: start;
+
+    h3{
+        font-weight: 600;
+        color: var(--gray);
+    }
     p{
         color: var(--gray);
     }
     ul{
         text-align: left;
+        
     }
 }
 @media screen and (max-width: 1000px) {
+    .content-text{
+
+        width:100%;
+        padding: 0 1rem;
+    }
     .course-item {
         width: 80%;
     }
