--- a/src/app/course/test/components/CourseHero.css
+++ b/src/app/course/test/components/CourseHero.css
@@ -24,34 +24,40 @@
   }
 }
 
-.course-hero::after {
+.course-hero-img{
+  height: 60%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  img{
+    height: 100%;
+    object-fit: cover;
+  }
+
+}
+.course-hero-img::after {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
+
   background: linear-gradient(
     to top,
     rgba(0, 0, 0, 0.8) 0%,
     rgba(0, 0, 0, 0.4) 60%
   );
   pointer-events: none;
- height: 66vh;
+ height: 100vh;
  
 }
-.course-hero img {
-  object-fit: cover;
-  min-width: auto;
- height: 66vh;
 
-
-}
 
 .course-overlay {
   position: absolute;
   width: auto;
-  height: 60%;
+  height: 50%;
   color: white;
   z-index: 2;
   display: flex;
@@ -96,6 +102,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 8;
+  background: white;
+  padding-bottom: 2rem;
 }
 .course-hero-buttom-mobile{
   display: none;
@@ -173,4 +182,5 @@
   .course-hero-buttom-mobile{
     display: flex;
   }
+
 }
