--- a/src/app/course/test/components/CourseContent.css
+++ b/src/app/course/test/components/CourseContent.css
@@ -25,7 +25,7 @@
 .course-item {
     
     width: 60%;
-    margin: 1rem 0;
+   
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -40,6 +40,7 @@
     }
     ul{
         text-align: left;
+        list-style: none;
         
     }
 }
@@ -51,6 +52,7 @@
     }
     .course-item {
         width: 80%;
+        
     }
     
   }
