--- a/src/app/course/test/components/CourseGet.css
+++ b/src/app/course/test/components/CourseGet.css
@@ -1,30 +1,27 @@
 .course-get {
-    position: relative;
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  color: var(--gray);
+  background: white;
+
+  img {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    color: var(--gray);
-    background: white;
-    
-    
-    img{
-        width: 100%;
-        object-fit: cover;
-        height: auto;
-        min-height: 400px;
-        max-height: 800px;
-    }
-    h3{
-      font-weight: 500;
-    }
-
+    object-fit: cover;
+    height: auto;
+    min-height: 400px;
+    max-height: 800px;
   }
+  h3 {
+    font-weight: 500;
+  }
+}
 
-.course-get-text{
-  
+.course-get-text {
   margin: 4rem 0;
   width: 100%;
   display: flex;
@@ -32,33 +29,29 @@
   justify-content: center;
   align-items: center;
   text-align: left;
-  
-  ul{
-    list-style:none;
+
+  ul {
     width: 60%;
-    li{
+    li {
       color: var(--dark-gray);
-      margin: 1rem 0;
+      list-style: none;
     }
   }
-  #coursegettext{
+  #coursegettext {
     width: 80%;
     color: black;
   }
 }
 
-
 @media screen and (max-width: 1000px) {
-  .course-get-text{
+  .course-get-text {
     padding: 1rem;
-    ul{
+    ul {
       width: 100%;
-      
+      padding: 0 0 0 1rem;
     }
-    #coursegettext{
+    #coursegettext {
       width: 100%;
     }
-    
-  
   }
 }
