--- a/src/app/course/test/components/CourseContent.css
+++ b/src/app/course/test/components/CourseContent.css
@@ -25,11 +25,12 @@
 .course-item {
     
     width: 60%;
-   
+    margin: 1rem 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: start;
+    
 
     h3{
         font-weight: 600;
@@ -52,7 +53,6 @@
     }
     .course-item {
         width: 80%;
-        
     }
     
   }
