--- a/src/app/course/test/components/CourseOutline.css
+++ b/src/app/course/test/components/CourseOutline.css
@@ -38,9 +38,9 @@
 
 .timeline {
   width: 40%;
-  padding: 1rem;
+ 
   position: relative;
-  height: 50vh;
+  height: auto;
   transition: width 0.3s ease, padding 0.3s ease, height 0.3s ease;
   h4{
     font-weight: 400;
