--- a/src/app/course/test/components/CourseHero.css
+++ b/src/app/course/test/components/CourseHero.css
@@ -25,7 +25,7 @@
 }
 
 .course-hero-img{
-  height: 60%;
+  height: 76%;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -54,7 +54,7 @@
 .course-overlay {
   position: absolute;
   width: auto;
-  height: 50%;
+  height: 60%;
   color: white;
   z-index: 2;
   display: flex;
@@ -95,13 +95,14 @@
 .course-hero-buttom,.course-hero-buttom-mobile{
   width: 100%;
   height: 100%;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   z-index: 8;
   background: white;
-  padding-bottom: 2rem;
+  padding: 1rem;
 }
 .course-hero-buttom-mobile{
   display: none;
@@ -115,9 +116,10 @@
   display: flex;
   justify-content: space-between;
   width: 80%;
+
   color: var(--gray);
   text-align: left;
-  margin: 1rem 0;
+  align-items: center;
   p{
     font-size: 0.8rem;
   }
