--- a/src/app/components/Footer.css
+++ b/src/app/components/Footer.css
@@ -1,7 +1,7 @@
   .footer {
       background-color: #1c1c1c;
       color: var(--off-white);
-      padding: 40px 20px;
+      padding: 2rem;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -20,7 +20,7 @@
     }
     .footer-logo {
       width: 200px;
-      color: white;
+      color: rgb(255, 255, 255);
     }
 
     .footer-logo img {
