--- a/src/app/course/test/components/CourseContent.css
+++ b/src/app/course/test/components/CourseContent.css
@@ -10,8 +10,8 @@
     padding: 4rem 0 0 0;
     color: var(--dark-gray);
     img{
-        width: auto;
-        height: 40vh;
+        width: 60%;
+        height: auto ;
         
         object-fit: cover;
     }
@@ -46,6 +46,12 @@
     }
 }
 @media screen and (max-width: 1000px) {
+    .course-content{
+        img{
+            width: 90vw;
+            height: auto;
+        }
+    }
     .content-text{
 
         width:100%;
