--- a/src/app/course/test/components/CourseHero.css
+++ b/src/app/course/test/components/CourseHero.css
@@ -162,7 +162,9 @@
   }
 }
 @media screen and (max-width: 1000px) {
-
+  .course-hero-img{
+    height: 60%;
+  }
   .course-price{
     display: flex;
 
