--- a/src/app/course/test/components/CourseContent.css
+++ b/src/app/course/test/components/CourseContent.css
@@ -1,5 +1,6 @@
 .course-content{
     display: flex;
+    
     justify-content: center;
     flex-direction: column;
     align-items: center;
@@ -7,33 +8,37 @@
     width: 100%;
     background: white;
     overflow: hidden;
-    padding: 4rem 0 0 0;
+    padding-top: 2rem;
+
     color: var(--dark-gray);
+    position: relative;
     img{
-        width: 60%;
+        width: 50%;
         height: auto ;
-        
+        border-radius: 1rem;
         object-fit: cover;
+
     }
 
 }
 .content-text{
     display: block;
     width:80%;
+    
 
 }
 .course-item {
     
+
     width: 60%;
-    margin: 1rem 0;
+   
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: start;
+    align-items: center;
     
 
-    h3{
-        font-weight: 600;
+    h5{
         color: var(--gray);
     }
     p{
@@ -42,8 +47,17 @@
     ul{
         text-align: left;
         list-style: none;
+        width: 80%;
+        display: grid;
+        grid-template-columns: 50% 50%;
         
     }
+    li{
+        margin: 1rem 0;
+        width: 80%
+
+    }
+
 }
 @media screen and (max-width: 1000px) {
     .course-content{
