--- a/src/app/course/test/components/CourseHero.css
+++ b/src/app/course/test/components/CourseHero.css
@@ -8,33 +8,35 @@
   color: white;
   background: white;
   height: 100vh;
+  
+
   h1 {
     line-height: 1;
-    font-weight: 600;
+   
   }
 
   p {
     line-height: 1.2;
     font-size: 1rem;
-    font-weight: 300;
+   
   }
   hr {
     border: 1px solid #ccc;
+    margin: 0.5rem;
     width: 80%;
   }
 }
 
-.course-hero-img{
+.course-hero-img {
   height: 76%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  img{
+  img {
     height: 100%;
     object-fit: cover;
   }
-
 }
 .course-hero-img::after {
   content: "";
@@ -43,13 +45,10 @@
   left: 0;
   right: 0;
 
-  background: rgb(0, 0, 0,0.4);
-  
+  background: rgb(0, 0, 0, 0.4);
 
- height: 100vh;
- 
+  height: 100vh;
 }
-
 
 .course-overlay {
   position: absolute;
@@ -62,10 +61,8 @@
   justify-content: center;
   align-items: center;
   top: 2rem;
-  padding: 1rem 0rem;
-  
 }
-.course-header{
+.course-header {
   position: absolute;
   width: auto;
   padding: 2rem 0rem 0rem;
@@ -77,7 +74,7 @@
   backdrop-filter: blur(20px);
   width: 100%;
   z-index: 8;
-  p{
+  p {
     padding: 0.2rem;
     font-size: 2vh;
   }
@@ -90,9 +87,9 @@
   justify-content: center;
   gap: 20px;
   animation: fadeIn 0.8s ease;
-  padding: 1rem;
 }
-.course-hero-buttom,.course-hero-buttom-mobile{
+.course-hero-buttom,
+.course-hero-buttom-mobile {
   width: 100%;
   height: 100%;
 
@@ -104,13 +101,8 @@
   background: white;
   padding: 1rem;
 }
-.course-hero-buttom-mobile{
+.course-hero-buttom-mobile {
   display: none;
-  
-  .course-price{
-    gap: 20px;
-  }
- 
 }
 .course-price {
   display: flex;
@@ -120,22 +112,20 @@
   color: var(--gray);
   text-align: left;
   align-items: center;
-  p{
+  p {
     font-size: 0.8rem;
   }
 }
 
 .course-links {
   display: flex;
-   
+
   align-items: center;
   justify-content: space-between;
 
-
-
   color: var(--gray);
   width: 80%;
-  p{
+  p {
     font-size: 0.8rem;
     width: 60%;
   }
@@ -151,7 +141,7 @@
     cursor: pointer;
     height: 1.5rem;
     width: 3rem;
-    margin: 1rem;
+
     background-color: var(--blue);
     color: white;
     transition: all 0.2s ease-in-out;
@@ -161,27 +151,32 @@
     background-color: var(--dark-blue);
   }
 }
+
 @media screen and (max-width: 1000px) {
-  .course-hero-img{
-    height: 60%;
+  .course-hero{
+    height: auto;
   }
-  .course-price{
+  hr {
+    margin: 1rem;
+  }
+  .course-hero-img {
+    height: 70vh  ;
+  }
+  .course-price {
     display: flex;
 
     flex-direction: column;
     width: 100%;
     padding: 0 1rem;
   }
-  .course-links{
+  .course-links {
     display: flex;
-    width: 100%;
-    flex-direction: column;
+    width: 80%;
   }
-  .course-hero-buttom{
+  .course-hero-buttom {
     display: none;
   }
-  .course-hero-buttom-mobile{
+  .course-hero-buttom-mobile {
     display: flex;
   }
-
 }
