--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,9 +23,27 @@
   
 }
 p{
-  font-size: 0.8rem;
+  font-size: 0.6rem;
   font-weight: 300;
 
+}
+h1 {
+  font-weight: 800;
+}
+h2{
+  font-weight: 700;
+}
+h3 {
+  font-weight: 600;
+}
+h4{
+  font-weight: 500;
+}
+h5{
+  font-weight: 400;
+}
+h6{
+  font-weight: 100;
 }
 .app {
   justify-content: center;
