--- a/src/app/course/test/components/CourseGet.css
+++ b/src/app/course/test/components/CourseGet.css
@@ -54,6 +54,7 @@ li{
 @media screen and (max-width: 1000px) {
   .course-get-text {
     padding: 1rem;
+    width: 100%;
     ul {
       width: 100%;
       padding: 0 0 0 1rem;
