--- a/src/app/course/test/components/CourseGet.css
+++ b/src/app/course/test/components/CourseGet.css
@@ -56,11 +56,13 @@ li{
   
     width: 100%;
     ul {
-      width: 100%;
-      padding: 0 0 0 1rem;
-    }
-    #coursegettext {
-      width: 100%;
+      width: 80%;
+
     }
   }
+    #coursegettext {
+      width: 100%;
+      padding: 1rem;
+    }
+  
 }
