--- a/src/app/course/test/components/CourseHero.css
+++ b/src/app/course/test/components/CourseHero.css
@@ -16,13 +16,13 @@
   }
 
   p {
-    line-height: 1.2;
+    line-height: 1.4;
     font-size: 1rem;
    
   }
   hr {
     border: 1px solid #ccc;
-    margin: 0.5rem;
+    margin: 0.2rem;
     width: 80%;
   }
 }
@@ -52,6 +52,7 @@
 
 .course-overlay {
   position: absolute;
+  padding: 1rem;
   width: auto;
   height: 60%;
   color: white;
@@ -97,6 +98,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
   z-index: 8;
   background: white;
   padding: 1rem;
@@ -154,17 +156,17 @@
 
 @media screen and (max-width: 1000px) {
   .course-hero{
-    height: auto;
+    height: 100vh;
   }
   hr {
     margin: 1rem;
   }
   .course-hero-img {
-    height: 70vh  ;
+    height: 66vh  ;
   }
   .course-price {
     display: flex;
-
+    align-items: flex-start;
     flex-direction: column;
     width: 100%;
     padding: 0 1rem;
@@ -178,5 +180,6 @@
   }
   .course-hero-buttom-mobile {
     display: flex;
+
   }
 }
