--- a/src/app/course/test/components/CourseHero.css
+++ b/src/app/course/test/components/CourseHero.css
@@ -66,7 +66,7 @@
 .course-header {
   position: absolute;
   width: auto;
-  padding: 2rem 0rem 0rem;
+  padding: 2rem 0rem ;
   display: flex;
   justify-content: center;
   align-items: end;
@@ -101,7 +101,7 @@
 
   z-index: 8;
   background: white;
-  padding: 1rem;
+  padding: 1rem 0;
 }
 .course-hero-buttom-mobile {
   display: none;
