--- a/src/app/course/test/components/CourseContent.css
+++ b/src/app/course/test/components/CourseContent.css
@@ -12,13 +12,7 @@
 
     color: var(--dark-gray);
     position: relative;
-    img{
-        width: 50%;
-        height: auto ;
-        border-radius: 1rem;
-        object-fit: cover;
-
-    }
+   
 
 }
 .content-text{
@@ -26,6 +20,21 @@
     width:80%;
     
 
+}
+.course-img{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem 0;
+    img{
+        width: 100%;
+        height: auto ;
+        border-radius: 1rem;
+        object-fit: cover;
+
+    }
 }
 .course-item {
     
@@ -60,12 +69,7 @@
 
 }
 @media screen and (max-width: 1000px) {
-    .course-content{
-        img{
-            width: 90vw;
-            height: auto;
-        }
-    }
+
     .content-text{
 
         width:100%;
