--- a/src/app/course/test/components/CourseHero.css
+++ b/src/app/course/test/components/CourseHero.css
@@ -66,7 +66,7 @@
 .course-header {
   position: absolute;
   width: auto;
-  padding: 2rem 0rem ;
+  padding: 2rem 0 0 0 ;
   display: flex;
   justify-content: center;
   align-items: end;
@@ -154,7 +154,7 @@
   }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 600px) {
   .course-hero{
     height: 100vh;
     hr{
@@ -168,10 +168,10 @@
   .course-price {
     display: flex;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: start;
     flex-direction: column;
     width: 100%;
-    height: 76%;
+    height: auto;
     padding: 0 1rem;
   }
   .course-links {
@@ -184,6 +184,7 @@
   }
   .course-hero-buttom-mobile {
     display: flex;
+    justify-content: start;
 
   }
 }
