--- a/src/app/course/test/components/CourseContent.css
+++ b/src/app/course/test/components/CourseContent.css
@@ -69,7 +69,9 @@
 
 }
 @media screen and (max-width: 1000px) {
-
+    .course-img{
+        width: 80%;
+    }
     .content-text{
 
         width:100%;
