--- a/src/app/course/test/components/CourseGet.css
+++ b/src/app/course/test/components/CourseGet.css
@@ -14,7 +14,7 @@
   img {
     width: 80%;
     border-radius: 1rem;
-    margin: 1rem;
+    margin: 1rem 0;
     object-fit: cover;
     height: auto;
     min-height: 400px;
