--- a/src/app/components/Navbar.css
+++ b/src/app/components/Navbar.css
@@ -180,12 +180,13 @@
         display: flex;
         justify-content: space-between;
         gap: 0;
-        width: 100%;
+        width: 60%;
     }
     .nav-link{
         display: flex;
-        padding:  0 2rem;
+       
         width: 100%;
+        max-width: 200px;
         justify-content: space-between;
     
     }
