--- a/src/app/course/test/components/CourseGet.css
+++ b/src/app/course/test/components/CourseGet.css
@@ -28,7 +28,7 @@
 }
 .course-get-text {
  
-  width: 60%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -39,13 +39,11 @@
     text-align: left;
     list-style: none;
     width: 100%;
-    display: grid;
-    grid-template-columns: 100%;
-    
+    display: block;
 }
 li{
     margin: 1rem 0;
-    width: 80%
+    width: 100%
 
 }
   
