--- a/src/app/course/test/components/CourseOutline.css
+++ b/src/app/course/test/components/CourseOutline.css
@@ -9,6 +9,7 @@
   transition: height 0.3s ease, overflow 0.3s ease;
   background: transparent;
   height: auto;
+
 }
 .course-timeline::after {
   background: linear-gradient(
@@ -61,14 +62,14 @@
   align-self: flex-start;
   margin-left: 10%;
   padding-left: 10%;
-  transition: margin-left 0.3s ease, padding-left 0.3s ease;
+
 }
 
 .timeline.right {
   align-self: flex-end;
   margin-right: 10%;
   padding-left: 10%;
-  transition: margin-right 0.3s ease, padding-left 0.3s ease;
+
 }
 
 .line {
@@ -94,6 +95,7 @@
 .button-container {
   position: absolute;
   bottom: 0px;
+  margin: 0.5rem;
   display: none;
   justify-content: center;
   width: 100%;
@@ -143,7 +145,7 @@
   .timeline.right {
     align-self: center;
     margin: 0;
-    padding: 1rem;
+    padding: 2rem;
     height: auto;
     width: 100%;
   }
