--- a/src/app/course/test/components/CourseTag.css
+++ b/src/app/course/test/components/CourseTag.css
@@ -4,10 +4,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 2rem 0;
-  gap: 1rem;
+  padding: 1rem 0;
+
   background: white;
-  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
   a {
     display: flex;
     justify-content: center;
@@ -31,10 +31,10 @@
 }
 }
 .course-name {
-  padding: 1rem;
+ 
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: auto;
   max-width: 800px;
   justify-content: center;
   align-items: center;
@@ -42,7 +42,7 @@
   height: auto;
   color: var(--dark-gray);
   hr{
-    width: 50%;
+    width: 80%;
   }
 }
 .tag {
@@ -50,8 +50,4 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  p {
-    color: var(--gray);
-    font-size: 0.8rem;
-  }
 }
