--- a/src/app/course/test/components/CourseTag.css
+++ b/src/app/course/test/components/CourseTag.css
@@ -1,13 +1,23 @@
-.course-tag {
+.course-tag{
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   padding: 1rem 0;
-
   background: white;
-  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
+  
+}
+.course-tag-desktop,
+.course-tag-mobile {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem 0;
+  hr{
+    width: 80%;
+    margin: 1rem;
+  }
   a {
     display: flex;
     justify-content: center;
@@ -19,7 +29,7 @@
     cursor: pointer;
     height: 1.5rem;
     width: 3rem;
-    margin: 1rem;
+   
     background-color: var(--blue);
     color: white;
     transition: all 0.2s ease-in-out;
@@ -27,27 +37,42 @@
   }
   a:hover {
     background-color: var(--dark-blue);
+   
+}
 
 }
+.course-tag-mobile {
+  display: none;
 }
 .course-name {
  
   display: flex;
   flex-direction: column;
   width: auto;
-  max-width: 800px;
+ 
   justify-content: center;
   align-items: center;
   text-align: center;
   height: auto;
   color: var(--dark-gray);
-  hr{
-    width: 80%;
-  }
+  
 }
 .tag {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+@media screen and (max-width: 1000px) {
+  .course-tag{
+  hr{
+    width: 40%;
+  }
+}
+  .course-tag-desktop {
+    display: none;
+  }
+  .course-tag-mobile {
+    display: block;
+  }
 }
