--- a/src/app/course/test/components/CourseContent.css
+++ b/src/app/course/test/components/CourseContent.css
@@ -63,6 +63,15 @@
         grid-template-columns: 60% 60%;
         
     }
+    ul li:nth-child(odd):last-child {
+        grid-column: span 2; /* Make the last odd item span both columns */
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+       
+        text-align: center; /* Center-align the text (optional) */
+    }
     li{
         margin: 1rem 0;
         width: 80%
