--- a/src/app/course/test/components/CourseContent.css
+++ b/src/app/course/test/components/CourseContent.css
@@ -1,6 +1,6 @@
 .course-content{
     display: flex;
-    
+    padding: 1.5rem 0;
     justify-content: center;
     flex-direction: column;
     align-items: center;
