--- a/src/app/course/test/components/CourseContent.css
+++ b/src/app/course/test/components/CourseContent.css
@@ -87,7 +87,7 @@
         display: block;
     }
     .course-content{
-        padding: 2rem 0;
+        padding: 0;
     }
     .course-img{
         width: 80%;
