--- a/src/app/course/test/components/CourseOutline.css
+++ b/src/app/course/test/components/CourseOutline.css
@@ -33,6 +33,7 @@
   background-color: white;
   text-align: left;
   width: 80%;
+  padding: 1rem;
 }
 
 .timeline {
@@ -62,7 +63,7 @@
   align-self: flex-start;
   margin-left: 10%;
   padding-left: 10%;
-  padding: 2rem;
+  padding: 0 2rem  2rem  2rem ;
 
 }
 
@@ -70,7 +71,7 @@
   align-self: flex-end;
   margin-right: 10%;
   padding-left: 10%;
-  padding: 2rem;
+  padding: 0 2rem  2rem  2rem ;
 
 }
 
