--- a/src/app/course/test/components/CourseTag.css
+++ b/src/app/course/test/components/CourseTag.css
@@ -30,7 +30,7 @@ box-shadow: rgb(0, 0, 0);
     cursor: pointer;
     height: 1.5rem;
     width: 3rem;
-   
+    margin: 1rem;
     background-color: var(--blue);
     color: white;
     transition: all 0.2s ease-in-out;
