--- a/src/app/home/Parts/Description.css
+++ b/src/app/home/Parts/Description.css
@@ -5,52 +5,40 @@
     color: var(--navy);
     z-index: 2;
     justify-content: space-between;
-    p{
-        font-size: 0.8rem;
+    padding: 1rem;
+    gap: 1rem;
+}
+
+.description .panel {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    object-fit: cover;
+   
+    img{
+        object-fit: cover;
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+
     }
 }
 
-.description .left-panel, .right-panel {
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    object-fit: cover;
-    text-align: center;
-}
-
-.description .left-panel img, .right-panel img {
-    object-fit: cover;
-    width: 50vw;
-    height: 40vw;
-    padding: 10px;
-}
-.des-overlay{
+.des-overlay {
     position: absolute;
     color: rgb(255, 255, 255);
     padding: 0 0 1rem 0;
     width: 40%;
-    z-index: 200; 
+    z-index: 200;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-   
-
-    h2{
-      font-size: 48px;
-        line-height: 1.3;
-        font-weight: 600;
-    }
-    p{
-      font-size: 24px;
-        line-height: 1.;
-        font-weight: 400;
-        letter-spacing: -0.02em;
-    }
 }
 .des-links {
     display: flex;
@@ -59,42 +47,35 @@
     width: 100%;
     margin-top: 0.5rem;
     gap: 1rem;
-    a{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-decoration: none;
-      color: white;
-      background-color: var(--blue);
-      border-radius: 40px;
-      height: 1.6rem;
-      padding: 0 20px;
-      font-size: 20px;
-    }
-    .post-trans{
-      background-color: white;
-      font-weight: 400;
-      color: var(--blue);
-    }
-  }
+}
+
+.des-links a {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+    background-color: var(--blue);
+    border-radius: 40px;
+    height: 1.6rem;
+    padding: 0 20px;
+    font-size: 20px;
+}
+
+.des-links .post-trans {
+    background-color: white;
+    font-weight: 400;
+    color: var(--blue);
+}
 
 /* Media Query for screen width less than 1000px */
 @media (max-width: 1000px) {
     .description {
         flex-direction: column; /* Stack the panels vertically */
-       
     }
 
-    .description .left-panel, .description .right-panel {
-        
-        img{
-            width: 96vw;
-            height: 100vw;
-        }
-    }
-    .des-overlay{
+    .des-overlay {
         width: 80%;
     }
-
 }
