--- a/src/app/home/Parts/Post.css
+++ b/src/app/home/Parts/Post.css
@@ -68,6 +68,7 @@
     width: 100%;
     margin-top: 0.5rem;
     gap: 1rem;
+    
     a{
       display: flex;
       flex-direction: column;
@@ -79,13 +80,14 @@
       border-radius: 40px;
       height: 1.6rem;
       padding: 0 20px;
-      font-size: 24px;
-      font-weight: 400;
+      font-size: 0.8rem;
+      font-weight: 300;
       transition: 0.2s;
+      
     }
     .post-trans{
       background-color: white;
-      font-weight: 400;
+      font-weight: 300;
       color: var(--blue);
     }
   }
