--- a/src/app/components/Footer.css
+++ b/src/app/components/Footer.css
@@ -17,6 +17,9 @@
       max-width: 1200px;
       gap: 20px;
       flex-wrap: wrap;
+      flex-direction: column;
+        align-items: center;
+        text-align: center;
     }
     .footer-logo {
       width: 200px;
@@ -37,6 +40,7 @@
     .footer-contact a {
       color: var(--off-white);
       text-decoration: none;
+
     }
     
 
@@ -44,16 +48,23 @@
     .footer-link {
       display: flex;
       justify-content: center;
+      flex-direction: column;
+      align-items: center;
       gap: 15px;
-      width: 200px;
+      width: auto;
       list-style: none;
       padding: 0;
     }
     
     .footer-link a {
+      display: flex;
+      justify-content: center;
+
+      align-items: center;
       color: var(--off-white);
       font-size: 1rem;
       transition: transform 0.3s ease, color 0.3s ease;
+      text-decoration: none;
     }
     
     .footer-link a:hover {
@@ -75,16 +86,3 @@
     }
     
   
-    /* Responsive Styles */
-    @media (max-width: 768px) {
-      .footer-content {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-      }
-    
-      .footer-contact {
-        text-align: center;
-      }
-    }
-    
