--- a/src/app/course/test/components/CourseGet.css
+++ b/src/app/course/test/components/CourseGet.css
@@ -11,12 +11,15 @@
   background: white;
   padding: 2rem 0;
 
-  img {
-    width: 80%;
-    border-radius: 1rem;
-    margin: 1rem 0;
-    object-fit: cover;
+  video, img {
+    width: 60%;
     height: auto;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    border-radius: 0.5rem;
+    margin: 1rem 0;
+   
+    
     min-height: 400px;
     max-height: 800px;
   }
