--- a/src/app/course/test/components/CourseHero.css
+++ b/src/app/course/test/components/CourseHero.css
@@ -34,7 +34,7 @@
   flex-direction: column;
   align-items: center;
   img {
-    height: 100%;
+    width: 100%;;
     object-fit: cover;
   }
 }
@@ -84,7 +84,7 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
-  animation: fadeIn 0.8s ease;
+ 
 }
 .course-hero-buttom,
 .course-hero-buttom-mobile {
