--- a/src/app/course/test/components/CourseGet.css
+++ b/src/app/course/test/components/CourseGet.css
@@ -12,13 +12,13 @@
   padding: 2rem 0;
 
   video, img {
-    width: 60%;
+    width: 80%;
+    max-width: 600px;
     height: auto;
     aspect-ratio: 1/1;
     object-fit: cover;
     border-radius: 0.5rem;
-    margin: 1rem 0;
-   
+    margin-bottom: 4rem;
     
     min-height: 400px;
     max-height: 800px;
