--- a/src/app/components/Footer.css
+++ b/src/app/components/Footer.css
@@ -1,7 +1,7 @@
   .footer {
       background-color: #1c1c1c;
       color: var(--off-white);
-      padding: 2rem;
+      padding: 1rem;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -13,16 +13,15 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      width: 100%;
-      max-width: 1200px;
+      width: 80%;
       gap: 20px;
       flex-wrap: wrap;
-      flex-direction: column;
+     
         align-items: center;
         text-align: center;
     }
     .footer-logo {
-      width: 200px;
+
       color: rgb(255, 255, 255);
     }
 
@@ -49,7 +48,7 @@
       display: flex;
       justify-content: center;
       flex-direction: column;
-      align-items: center;
+      align-items: start;
       gap: 15px;
       width: auto;
       list-style: none;
@@ -60,7 +59,7 @@
     .footer-link a {
       display: flex;
       justify-content: center;
-
+      gap: 10px;
       align-items: center;
       color: var(--off-white);
       font-size: 0.6rem;
@@ -78,7 +77,7 @@
     
     .footer-line {
       border-top: 1px solid #696969;
-      width: 100%;
+      width: 80vw;
       margin: 20px; /* Adds spacing between the line and the text */
     }
     
