--- a/src/app/gallery/components/Gallery.css
+++ b/src/app/gallery/components/Gallery.css
@@ -84,7 +84,7 @@
   bottom: 0;
   display: flex;
   flex-direction: column;
-  color: white; /* ปรับสีข้อความ */
+  color: white;
   transition: 0.5s;
   padding: 10px;
   text-align: center;
@@ -106,6 +106,8 @@
     transition: 0.2s;
     padding: 1rem;
     text-align: left;
+    color: white;
+    background-color: transparent;
   }
 }
 
