--- a/src/app/course/test/components/CourseContent.css
+++ b/src/app/course/test/components/CourseContent.css
@@ -6,7 +6,7 @@
     align-items: center;
     text-align: left;
     width: 100%;
-    background: white;
+    background: var(--off-white);
     overflow: hidden;
  
     color: var(--dark-gray);
