--- a/src/app/course/test/components/CourseGet.css
+++ b/src/app/course/test/components/CourseGet.css
@@ -8,7 +8,7 @@
   text-align: left;
   overflow: hidden;
   color: var(--gray);
-  background: white;
+  background: var(--off-white);
   padding: 2rem 0;
 
   video, img {
