--- a/src/app/course/test/components/CourseHero.css
+++ b/src/app/course/test/components/CourseHero.css
@@ -6,7 +6,7 @@
   align-items: center;
   overflow: hidden;
   color: white;
-  background: white;
+  background: var(--off-white);
   height: auto;
   
 
@@ -80,6 +80,7 @@
     margin: 0.1rem;
   }
 }
+
 .course-text {
   display: flex;
   text-align: center;
@@ -100,7 +101,7 @@
   align-items: center;
 
   z-index: 8;
-  background: white;
+  background: var(--off-white);
   padding: 1rem 0;
 }
 .course-hero-buttom-mobile {
@@ -151,7 +152,11 @@
     background-color: var(--dark-blue);
   }
 }
-
+.course-price-mobile-wrapper{
+  justify-self: center;
+  width: 100%;
+  text-align: center;
+}
 @media screen and (max-width: 600px) {
   .course-hero{
     min-height: 100vh;
@@ -177,6 +182,7 @@
     display: flex;
     width: 100%;
     padding: 0 1rem;
+    margin: 1rem 0;
   }
   .course-hero-buttom {
     display: none;
