--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
   --blue: #3894ff;
   --dark-blue: #1b77ee;
   --yellow: #ffdc50;
-  --off-white: #fff8f5;
+  --off-white: #faf3f1;
   --red: #dc4a44;
   --gray: #323232;
   --light-gray: #646464;
