--- a/src/app/components/Slider.css
+++ b/src/app/components/Slider.css
@@ -1,10 +1,10 @@
-html, body {
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 .sliderComponent {
-  
   position: relative;
   height: auto;
   width: 100vw;
@@ -17,7 +17,6 @@ html, body {
 }
 
 .sliderComponent .slider {
-  
   display: flex;
   scroll-snap-type: x mandatory; /* Enable snapping for smooth UX */
   overflow-x: auto;
@@ -30,7 +29,6 @@ html, body {
 }
 
 .sliderComponent .slide {
-
   height: 60vh;
   position: relative;
   flex: 0 0 33.33%;
@@ -39,11 +37,11 @@ html, body {
   align-items: center;
   overflow: hidden;
   z-index: 2;
+  transition: 0.4s ease;
 }
 .sliderComponent .slide:hover {
   transform: scale(1);
 }
-
 
 .sliderComponent .slide img,
 .sliderComponent .slide video {
@@ -57,19 +55,26 @@ html, body {
 }
 .sliderComponent .slide video {
   opacity: 0;
+  transform: scale(1.05);
 }
-.sliderComponent .slide:hover video {
-  opacity: 1;
-}
-.sliderComponent .slide:hover .sliderOverlay {
-  .description {
+.sliderComponent .slide:hover {
+  transform: scale(1.02);
+  .sliderOverlay {
+    transform: scale(1.1);
+    .description {
+      opacity: 1;
+    }
+  }
+  video {
     opacity: 1;
+    transition: transform 0.2s ease, opacity 0.5s ease;
+    transform: scale(1);
   }
 }
+
 .sliderComponent .slide:hover .play {
   opacity: 0;
   display: none;
-
 }
 
 .sliderComponent .slide::after {
@@ -87,7 +92,8 @@ html, body {
   pointer-events: none; /* Prevent clicks on this layer */
 }
 
-.sliderOverlay, .play {
+.sliderOverlay,
+.play {
   position: absolute;
   bottom: 0;
   display: flex;
@@ -120,11 +126,11 @@ html, body {
   }
 }
 .play {
-    font-size: 2rem;
-    color: rgba(255, 255, 255, 0.6);
-    bottom: 40%;
-    opacity: 1;
-    transition: 0.8s;
+  font-size: 2rem;
+  color: rgba(255, 255, 255, 0.6);
+  bottom: 40%;
+  opacity: 1;
+  transition: 0.8s;
 }
 
 #left-prevSlide-button,
@@ -156,11 +162,10 @@ html, body {
   );
 }
 @media screen and (min-width: 1000px) {
-  .sliderComponent .slide{
+  .sliderComponent .slide {
     margin: 10px 5px;
     border-radius: 10px;
   }
-  
 }
 @media screen and (max-width: 1400px) {
   .sliderComponent {
