--- a/src/app/components/Slider.css
+++ b/src/app/components/Slider.css
@@ -22,14 +22,15 @@ body {
   overflow-x: auto;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height:   auto;
+
   gap: 0; /* No gaps between slides */
   object-fit: cover;
   scrollbar-width: none;
 }
 
 .sliderComponent .slide {
-  height: 60vh;
+  height: 50vh;
   position: relative;
   flex: 0 0 33.33%;
   display: flex;
@@ -140,7 +141,7 @@ body {
   border: none;
   cursor: pointer;
   width: 10vw;
-  height: 60vh;
+  height: 50vh;
   font-size: 1.5rem;
   transition: transform 0.2s ease-in-out;
   z-index: 2;
