--- a/src/app/home/Parts/Description.css
+++ b/src/app/home/Parts/Description.css
@@ -31,6 +31,7 @@
 .des-text-wrap{
     width: 80%;
     a{
+        align-self: center;
         display: flex;
         flex-direction: column;
         justify-content: center;
