--- a/src/app/home/Parts/MainSlider.css
+++ b/src/app/home/Parts/MainSlider.css
@@ -89,7 +89,7 @@
 .container .text-overlay {
   color: #fff;
   position: absolute;
-  top: 4rem;
+  top: 20%;
   display: flex;
   flex-direction: column;
   gap: 10px;
