--- a/src/app/home/Parts/Description.css
+++ b/src/app/home/Parts/Description.css
@@ -30,6 +30,11 @@
 }
 .des-text-wrap{
     width: 80%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     a{
         align-self: center;
         display: flex;
